# MiniNES

./: CMakeLists.txt  main.cpp
cmake/Modules/: Findspdlog.cmake
